[package]
name = "opensound"
authors = ["29 <791603901@qq.com>"]
version = "0.0.6"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["audio", "midi", "music", "sound", "daw"]
categories = [
    "multimedia",
    "multimedia::audio",
    "network-programming",
    "web-programming::http-server",
    "web-programming::websocket"
]
repository = "https://gitlab.com/opensound-org/opensound"
homepage = "https://opensound.run"
documentation = "https://docs.rs/opensound"
description = """
(WIP)A One-Stop Multi-Level SoundSystem Abstraction (or say sound/audio engine). Suitable for being a solid foundation for Pro-Audio Applications(e.g. a DAW) or other sound related apps.
"""
edition = "2021"
rust-version = "1.75.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.0"
chrono = { version = "0.4.37", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive", "cargo"] }
futures = "0.3.30"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sys-locale = "0.3.1"
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["chrono"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }

# Optional web server frameworks for the kernel
# 供内核选配的Web服务器框架
actix-web = { version = "4.5.1", optional = true }
axum = { version = "0.7.5", optional = true }
ntex = { version = "1.2.1", features = ["tokio"], optional = true }
poem = { version = "3.0.0", optional = true }
rocket = { version = "0.5.0", optional = true }
salvo = { version = "0.67.0", optional = true }
socket2 = { version = "0.5.6", optional = true }
viz = { version = "0.8.4", optional = true }
warp = { version = "0.3.7", optional = true }

[features]
default = ["salvo"]
actix-web = ["dep:actix-web"]
axum = ["dep:axum"]
ntex = ["dep:ntex", "dep:socket2"]
poem = ["dep:poem"]
rocket = ["dep:rocket"]
salvo = ["dep:salvo"]
viz = ["dep:viz"]
warp = ["dep:warp"]
