[package]
name = "opensound"
authors = ["29 <791603901@qq.com>"]
version = "0.0.6"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["audio", "midi", "music", "sound", "daw"]
categories = [
    "multimedia",
    "multimedia::audio",
    "network-programming",
    "web-programming::http-server",
    "web-programming::websocket"
]
repository = "https://gitlab.com/opensound-org/opensound"
homepage = "https://opensound.run"
documentation = "https://docs.rs/opensound"
description = """
(WIP)A One-Stop Multi-Level SoundSystem Abstraction (or say sound/audio engine). Suitable for being a solid foundation for Pro-Audio Applications(e.g. a DAW) or other sound related apps.
"""
edition = "2021"
rust-version = "1.75.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.82"
base64 = "0.22.0"
chrono = { version = "0.4.37", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive", "cargo"] }
futures = "0.3.30"
http = "1.1.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sys-locale = "0.3.1"
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["chrono"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }

# Optional web server frameworks for the MicroKernel
# 供微内核选配的Web服务器框架
actix-web = { version = "4.5.1", optional = true }
axum = { version = "0.7.5", optional = true }
ntex = { version = "1.2.1", features = ["tokio"], optional = true }
poem = { version = "3.0.0", optional = true }
rocket = { version = "0.5.0", features = ["json"], optional = true }
salvo = { version = "0.67.2", features = ["affix"], optional = true }
socket2 = { version = "0.5.6", optional = true }
viz = { version = "0.8.4", optional = true }

[features]
default = ["salvo"]
salvo = ["dep:salvo"]
poem = ["dep:poem"]
actix-web = ["dep:actix-web"]
axum = ["dep:axum"]
rocket = ["dep:rocket"]
viz = ["dep:viz"]
ntex = ["dep:ntex", "dep:socket2"]

[build-dependencies]
sys-locale = "0.3.1"

# Axum and Viz have a propagating bug caused by a "hyper-util" bug.
# Now "hyper-util" has been updated on git, but it has not been released to crates.io yet. 
# It needs to be patched temporarily.
# For more information, see the issue link below:
# 
# Axum和Viz有一个由于“hyper-util”的bug导致的传播的bug。
# 现“hyper-util”已在git上更新，但还没有发版至crates，现需临时给它打个补丁。
# 更多信息见下方issue链接：
#
# https://github.com/opensound-org/opensound/issues/2
[patch.crates-io]
hyper-util = { git = "https://github.com/hyperium/hyper-util.git", rev = "a77d866ff65a68ea5d048d058108552c39ec470d" }
