[package]
name = "opensound"
authors = ["29 <791603901@qq.com>"]
version = "0.0.6"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["audio", "midi", "music", "sound", "daw"]
categories = [
    "multimedia",
    "multimedia::audio",
    "network-programming",
    "web-programming::http-server",
    "web-programming::websocket"
]
repository = "https://gitlab.com/opensound-org/opensound"
homepage = "https://opensound.run"
documentation = "https://docs.rs/opensound"
description = """
(WIP)A One-Stop Multi-Level SoundSystem Abstraction (or say sound/audio engine). Suitable for being a solid foundation for Pro-Audio Applications(e.g. a DAW) or other sound related apps.
"""
edition = "2021"
rust-version = "1.76.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.86"
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.6", features = ["derive", "cargo"] }
futures = "0.3.30"
http = "1.1.0"
rust-embed = { version = "8.4.0", features = ["debug-embed"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sys-locale = "0.3.1"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tokio-tungstenite = "0.23.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["chrono"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }

# Optional web server frameworks for the MicroKernel
# 供微内核选配的Web服务器框架
actix-web = { version = "4.6.0", optional = true }
axum = { version = "0.7.5", optional = true }
ntex = { version = "2.0.1", features = ["tokio"], optional = true }
poem = { version = "3.0.1", optional = true }
rocket = { version = "0.5.1", features = ["json"], optional = true }
salvo = { version = "0.68.1", features = ["affix", "serve-static"], optional = true }
socket2 = { version = "0.5.7", optional = true }
viz = { version = "0.8.5", optional = true }

[features]
default = ["salvo"]
salvo = ["dep:salvo"]
poem = ["dep:poem"]
viz = ["dep:viz"]
actix-web = ["dep:actix-web"]
axum = ["dep:axum"]
rocket = ["dep:rocket"]
ntex = ["dep:ntex", "dep:socket2"]

[build-dependencies]
sys-locale = "0.3.1"
